finish pi05 data preprocess

--- a/check_data.ipynb
+++ b/check_data.ipynb
@@ -2,32 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37993\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "path = \"/home/szxie/storage/lerobot/data/baked/2025-11-12_joint6/data/chunk-000/file_000.parquet\"\n",
+    "path = \"/home/szxie/storage/lerobot/data/baked/2025-11-12_j6_v3/data/chunk-000/file_000.parquet\"\n",
     "\n",
     "df = pd.read_parquet(path)\n",
     "\n",
     "# print(df)\n",
     "# print(df.columns)\n",
-    "print(len(df))"
+    "# print(len(df))\n",
+    "# df.iloc[0]\n",
+    "df = pd.read_parquet(\"/home/szxie/storage/lerobot/data/baked/2025-11-12_j6_v3/meta/tasks.parquet\")\n",
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/home/szxie/storage/lerobot/data/baked/2025-11-12_j6_v3/meta/episodes/chunk-000/file_000.parquet\" \n",
+    "df = pd.read_parquet(path)\n",
+    "\n",
+    "# print(df)\n",
+    "# print(df.columns)\n",
+    "# print(len(df))\n",
+    "df.iloc[0][\"tasks\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +66,39 @@
     "        print(df)\n",
     "    except Exception as e:\n",
     "        print(f\"Error reading {p}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "task_str = \"Pick up the box on the conveyor belt and place it in the container\"\n",
+    "\n",
+    "# 把 task 放到 index 里，列里只保留 task_index\n",
+    "df = pd.DataFrame(\n",
+    "    {\"task_index\": [0]},\n",
+    "    index=[task_str],\n",
+    ")\n",
+    "\n",
+    "output_path = Path(\"./test.parquet\")\n",
+    "df.to_parquet(output_path)  # 注意这里不要加 index=False，让 index 一起存进去\n",
+    "\n",
+    "print(f\"Written to {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet(output_path)\n",
+    "df"
    ]
   },
   {
